# nakago

./: .dockerignore  .editorconfig  .envrc.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  blog.html  docker-compose.yml  index.html  markdown-page.html  sitemap.xml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
blog/: archive.html  atom.xml  authors.html  index.html  pivot-di-toolkit.html  rss.xml  welcome.html
docs/: application.md  async-graphql.md  axum-http.md  dependency-injection.md  development.html  development.md  examples.html  examples.md  intro.html  sea-orm.md  tutorial.html
examples/: .gitignore
examples/async-graphql/: Cargo.toml  Dockerfile  config.ci.toml  config.local.toml.example  config.test.toml.example  docker-compose.app.yml
examples/async-graphql/config/: ci.toml  default.toml  local.toml.example  test.toml.example
examples/async-graphql/src/: Makefile.toml  authz.rs  config.rs  db.rs  graphql.rs  handlers.rs  init.rs  lib.rs  main.rs  messages.rs  providers.rs  router.rs  routes.rs
examples/async-graphql/src/db/: mod.rs  provider.rs  providers.rs
examples/async-graphql/src/domains/: controller.rs  graphql.rs  hooks.rs  init.rs  load.rs  mod.rs  providers.rs
examples/async-graphql/src/domains/episodes/: loader.rs  loaders.rs  mod.rs  model.rs  mutation.rs  mutations.rs  providers.rs  queries.rs  query.rs  resolver.rs  schema.rs  service.rs
examples/async-graphql/src/domains/episodes/tests/: resolver_test.rs  service_test.rs
examples/async-graphql/src/domains/profiles/: loader.rs  loaders.rs  mod.rs  model.rs  mutation.rs  mutations.rs  providers.rs  queries.rs  query.rs  resolver.rs  schema.rs  service.rs
examples/async-graphql/src/domains/profiles/tests/: service_test.rs
examples/async-graphql/src/domains/role_grants/: loader.rs  loaders.rs  mod.rs  model.rs  providers.rs  schema.rs  service.rs  service_test.rs
examples/async-graphql/src/domains/role_grants/tests/: service_test.rs
examples/async-graphql/src/domains/shows/: loader.rs  loaders.rs  mod.rs  mutation.rs  mutations.rs  providers.rs  queries.rs  query.rs  resolver.rs  schema.rs  service.rs
examples/async-graphql/src/domains/shows/tests/: service_test.rs
examples/async-graphql/src/domains/users/: loader.rs  loaders.rs  mod.rs  model.rs  mutation.rs  providers.rs  query.rs  resolver.rs  schema.rs  service.rs  service_test.rs
examples/async-graphql/src/domains/users/tests/: service_test.rs
examples/async-graphql/src/events/: connections.rs  controller.rs  handler.rs  messages.rs  mod.rs  providers.rs  session.rs  socket.rs
examples/async-graphql/src/http/: events.rs  graphql.rs  handlers.rs  health.rs  init.rs  load.rs  mod.rs  router.rs  routes.rs  state.rs
examples/async-graphql/src/utils/: authz.rs  config.rs  graphql.rs  mod.rs  providers.rs
examples/async-graphql/tests/: test_episode_integration.rs  test_events_integration.rs  test_profile_integration.rs  test_show_integration.rs  test_user_integration.rs  test_utils.rs  utils.rs
examples/cqrs-es/: Cargo.toml
examples/cqrs-es/src/: main.rs
examples/simple/: Cargo.toml  Dockerfile  config.local.toml.example  docker-compose.app.yml
examples/simple-warp/: Cargo.toml  Dockerfile  docker-compose.app.yml
examples/simple-warp/src/: config.rs  init.rs  main.rs
examples/simple-warp/src/http/: health.rs  init.rs  mod.rs  router.rs  user.rs
examples/simple-warp/tests/: test_users_int.rs  utils.rs
examples/simple/config/: ci.toml  default.toml  local.toml.example
examples/simple/migrations/: 20220409153224_users_and_profiles.sql
examples/simple/src/: config.rs  handlers.rs  init.rs  lib.rs  main.rs  routes.rs
examples/simple/src/http/: handlers.rs  health.rs  init.rs  load.rs  mod.rs  router.rs  routes.rs  state.rs  user.rs
examples/simple/src/users/: mod.rs  model.rs  service.rs
examples/simple/tests/: test_users_int.rs  test_utils.rs  utils.rs
markdown-page/: index.html
nakago/: Cargo.toml  README.md
nakago/derive/: Cargo.toml
nakago/derive/src/: args.rs  from_ref.rs  lib.rs  provider.rs  utils.rs
nakago/src/: app.rs  container.rs  errors.rs  injector.rs  key.rs  lib.rs  lifecycle.rs  log.rs  panic.rs  provider.rs  system.rs  tag.rs  type_id.rs
nakago/src/config/: hooks.rs  loader.rs  mod.rs  provider.rs  providers.rs
nakago/src/inject/: container.rs  error.rs  errors.rs  hooks.rs  injector.rs  mod.rs  provide.rs  provider.rs  providers.rs  tag.rs  type_id.rs
nakago/src/utils/: from_ref.rs  mod.rs
nakago_async_graphql/: Cargo.toml  README.md
nakago_async_graphql/src/: data.rs  errors.rs  lib.rs  loaders.rs  schema.rs  services.rs
nakago_async_graphql/src/test/: http.rs  mod.rs  utils.rs
nakago_auth/: Cargo.toml
nakago_auth/src/: lib.rs
nakago_axum/: Cargo.toml  README.md
nakago_axum/src/: app.rs  config.rs  errors.rs  http_config.rs  init.rs  lib.rs  providers.rs  router.rs  routes.rs  state.rs  utils.rs
nakago_axum/src/auth/: authenticate.rs  claims.rs  config.rs  errors.rs  jwks.rs  mod.rs  providers.rs  state.rs  subject.rs  validator.rs
nakago_axum/src/test/: http.rs  mod.rs  utils.rs
nakago_cqrs/: Cargo.toml
nakago_cqrs/src/: lib.rs  postgres.rs  views.rs
nakago_derive/: Cargo.toml  README.md
nakago_derive/src/: args.rs  from_ref.rs  lib.rs  provider.rs
nakago_figment/: Cargo.toml  README.md
nakago_figment/src/: config.rs  init.rs  lib.rs  loader.rs  loaders.rs
nakago_sea_orm/: Cargo.toml  README.md
nakago_sea_orm/src/: config.rs  connection.rs  lib.rs
nakago_warp/: Cargo.toml  README.md
nakago_warp/src/: app.rs  config.rs  errors.rs  init.rs  lib.rs  routes.rs  utils.rs
nakago_warp/src/auth/: config.rs  errors.rs  jwks.rs  subject.rs  validator.rs
nakago_warp/src/test/: utils.rs
nakago_ws/: Cargo.toml  README.md
nakago_ws/src/: auth.rs  connections.rs  controller.rs  handler.rs  lib.rs  router.rs  socket.rs
src/: app.rs  lib.rs
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  (+1 more)
(+232 files in other folders)
