[workspace]
resolver = "2"
members = [
    "nakago",
    "nakago_async_graphql",
    "nakago_axum",
    "nakago_derive",
    "nakago_figment",
    "nakago_sea_orm",
    "nakago_warp",
    "nakago_ws",
    "examples/*",
]
default-members = [
    "nakago",
    "nakago_async_graphql",
    "nakago_axum",
    "nakago_derive",
    "nakago_figment",
    "nakago_sea_orm",
    "nakago_warp",
    "nakago_ws",
]

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["Brandon Konkle <brandon@konkle.us>"]
homepage = "https://github.com/bkonkle/nakago"
repository = "https://github.com/bkonkle/nakago"

[patch.crates-io]
nakago = { path = "./nakago" }
nakago-async-graphql = { path = "./nakago_async_graphql" }
nakago-axum = { path = "./nakago_axum" }
nakago-derive = { path = "./nakago_derive" }
nakago-figment = { path = "./nakago_figment" }
nakago-sea-orm = { path = "./nakago_sea_orm" }
nakago-warp = { path = "./nakago_warp" }
nakago-ws = { path = "./nakago_ws" }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Link time optimization.
codegen-units = 1 # Allow for maximum size reduction optimizations.
