[package]
name = "nakago"
version = "0.19.1"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "A lightweight Rust framework for sharp services 😎"
documentation = "https://docs.rs/nakago/"
homepage = "https://github.com/bkonkle/nakago"
repository = "https://github.com/bkonkle/nakago"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backtrace = "0.3"
crossterm = "0.27"
derive-new = "0.6"
figment = { version = "0.10", features = ["env", "toml", "yaml", "json"] }
fnv = "1.0.7"
futures = "0.3.28"
log = "0.4"
nakago-derive = "0.19"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
fake = { version = "2.9", features = [
    'derive',
    'chrono',
    'http',
    'uuid',
], git = "https://github.com/cksac/fake-rs.git" }
pretty_assertions = "1.2"
