[package]
name = "nakago"
version = "0.25.0"
description = "A lightweight Rust toolkit for sharp dependency injection 😎"
documentation = "https://docs.rs/nakago/"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backtrace = "0.3"
derive-new = "0.7"
fnv = "1.0.7"
futures = "0.3.28"
log = "0.4"
nakago-derive = "0.25"
pretty_env_logger = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
fake = { version = "3.1", features = ['derive', 'chrono', 'http', 'uuid'] }
mockall = "0.13"
pretty_assertions = "1.2"
googletest = "0.13"
