[package]
name = "nakago-async-graphql"
version = "0.24.1"
description = "An Async-GraphQL integration for Nakago"
documentation = "https://docs.rs/nakago-async-graphql/"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
async-graphql = { git = "https://github.com/aumetra/async-graphql", branch = "axum-0.8", features = [
    "chrono",
    "dataloader",
] }
async-graphql-axum = { git = "https://github.com/aumetra/async-graphql", branch = "axum-0.8" }
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
derive-new = "0.7"
fake = { version = "3.1", features = ['derive', 'chrono', 'http', 'uuid'] }
figment = { version = "0.10", features = ["env"] }
hyper = "1.0"
log = "0.4"
nakago = "0.24"
nakago-axum = "0.24"
nakago-derive = "0.23"
nakago-figment = "0.24"
pretty_env_logger = "0.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
mockall = "0.13"
pretty_assertions = "1.2"
