[package]
name = "nakago-auth"
version = "0.20.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "An Axum HTTP routes integration for Nakago"
documentation = "https://docs.rs/nakago/"
homepage = "https://github.com/bkonkle/nakago"
repository = "https://github.com/bkonkle/nakago"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
biscuit = "0.7.0"
bytes = "1"
derive-new = "0.6"
fake = { version = "2.9", features = [
    'derive',
    'chrono',
    'http',
    'uuid',
], git = "https://github.com/cksac/fake-rs.git" }
jsonwebtoken = "9.0"
log = "0.4"
nakago = "0.19"
nakago-derive = "0.19"
pretty_env_logger = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
mockall = "0.12"
pretty_assertions = "1.2"
