[package]
name = "nakago-axum"
version = "0.25.0"
description = "An Axum HTTP routes integration for Nakago"
documentation = "https://docs.rs/nakago-axum/"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "macros"] }
backtrace = "0.3"
biscuit = "0.7.0"
bytes = "1"
crossterm = "0.28"
derive-new = "0.7"
fake = { version = "3.1", features = ['derive', 'chrono', 'http', 'uuid'] }
figment = { version = "0.10", features = ["env"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
hyper = "1.0"
jsonwebtoken = "9.0"
log = "0.4"
nakago = "0.25"
nakago-derive = "0.25"
nakago-figment = "0.25"
pretty_env_logger = "0.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
criterion = "0.5"
mockall = "0.13"
pretty_assertions = "1.2"
