[package]
name = "nakago-cqrs"
version = "0.19.1"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "CQRS utils for Nakago"
documentation = "https://docs.rs/nakago/"
homepage = "https://github.com/bkonkle/nakago"
repository = "https://github.com/bkonkle/nakago"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }
biscuit = "0.7.0"
derive-new = "0.6"
fake = { version = "2.9", features = [
    'derive',
    'chrono',
    'http',
    'uuid',
], git = "https://github.com/cksac/fake-rs.git" }
futures = "0.3"
hyper = "1.0"
jsonwebtoken = "9.0"
log = "0.4"
nakago = "0.19"
nakago-axum = "0.19"
nakago-derive = "0.19"
mockall = "0.12"
pretty_env_logger = "0.5"
postgres-es = "0.4"
cqrs-es = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
ulid = "1.0"
warp = "0.3"

[dev-dependencies]
mockall = "0.12"
pretty_assertions = "1.2"
