[package]
name = "nakago-derive"
version = "0.19.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "Macros for nakago"
documentation = "https://docs.rs/nakago/"
homepage = "https://github.com/bkonkle/nakago"
repository = "https://github.com/bkonkle/nakago"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.1"
proc-macro2 = "1.0.24"
proc-macro-crate = "3.0.0"
quote = "1.0.9"
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "visit-mut",
    "visit",
] }
thiserror = "1.0"
