[package]
name = "nakago-derive"
version = "0.23.0"
description = "Macros for nakago"
documentation = "https://docs.rs/nakago-derive/"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.1"
proc-macro2 = "1.0.24"
proc-macro-crate = "3.1.0"
quote = "1.0.9"
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "visit-mut",
    "visit",
] }
thiserror = "1.0"
