[package]
name = "nakago-figment"
version = "0.23.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "Figment config loading utils for Nakago"
documentation = "https://docs.rs/nakago/"
homepage = "https://github.com/bkonkle/nakago"
repository = "https://github.com/bkonkle/nakago"
license = "MIT"

[dependencies]
anyhow = "1.0"
derive-new = "0.7"
fake = { version = "2.9", features = [
    'derive',
    'chrono',
    'http',
    'uuid',
], git = "https://github.com/cksac/fake-rs.git" }
figment = { version = "0.10", features = ["env", "toml", "yaml", "json"] }
log = "0.4"
nakago = "0.23"
nakago-derive = "0.23"
mockall = "0.13"
pretty_env_logger = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ulid = "1.0"

[dev-dependencies]
mockall = "0.13"
pretty_assertions = "1.2"
