[package]
name = "nakago-figment"
version = "0.24.1"
description = "Figment config loading utils for Nakago"
documentation = "https://docs.rs/nakago-figment/"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
derive-new = "0.7"
fake = { version = "3.1", features = ['derive', 'chrono', 'http', 'uuid'] }
figment = { version = "0.10", features = ["env", "toml", "yaml", "json"] }
log = "0.4"
nakago = "0.24"
nakago-derive = "0.23"
mockall = "0.13"
pretty_env_logger = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ulid = "1.0"

[dev-dependencies]
mockall = "0.13"
pretty_assertions = "1.2"
