[package]
name = "nakago-sea-orm"
version = "0.8.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "A SeaORM integration for Nakago"
documentation = "https://docs.rs/nakago/"
homepage = "https://github.com/bkonkle/nakago"
repository = "https://github.com/bkonkle/nakago"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.6", features = ["macros"] }
figment = { version = "0.10", features = ["env"] }
log = "0.4"
nakago = "0.8"
pretty_env_logger = "0.5"
rand = "0.8"
sea-orm = { version = "0.12", features = [
    "macros",
    "mock",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
mockall = "0.11"
pretty_assertions = "1.2"
