[package]
name = "nakago-sea-orm"
version = "0.20.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "A SeaORM integration for Nakago"
documentation = "https://docs.rs/nakago/"
homepage = "https://github.com/bkonkle/nakago"
repository = "https://github.com/bkonkle/nakago"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
derive-new = "0.6"
figment = { version = "0.10", features = ["env"] }
log = "0.4"
nakago = "0.20"
nakago-derive = "0.20"
pretty_env_logger = "0.5"
rand = "0.8"
sea-orm = { version = "0.12", features = [
    "macros",
    "mock",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
mockall = "0.12"
pretty_assertions = "1.2"
