[package]
name = "nakago-sea-orm"
version = "0.23.0"
description = "A SeaORM integration for Nakago"
documentation = "https://docs.rs/nakago-sea-orm/"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
derive-new = "0.7"
figment = { version = "0.10", features = ["env"] }
log = "0.4"
nakago = "0.23"
nakago-derive = "0.23"
nakago-figment = "0.23"
pretty_env_logger = "0.5"
rand = "0.8"
sea-orm = { version = "1.0", features = [
    "macros",
    "mock",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
mockall = "0.13"
pretty_assertions = "1.2"
