[package]
name = "nakago-warp"
version = "0.19.1"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "A Warp HTTP routes integration for Nakago"
documentation = "https://docs.rs/nakago/"
homepage = "https://github.com/bkonkle/nakago"
repository = "https://github.com/bkonkle/nakago"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
biscuit = "0.7.0"
bytes = "1"
derive-new = "0.6"
figment = { version = "0.10", features = ["env"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
hyper = "1.0"
log = "0.4"
nakago = "0.19"
nakago-derive = "0.19"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
warp = "0.3"

[dev-dependencies]
pretty_assertions = "1.2"
