[package]
name = "nakago-ws"
version = "0.24.0"
description = "Websocket utils for Nakago"
documentation = "https://docs.rs/nakago-ws/"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }
biscuit = "0.7.0"
derive-new = "0.7"
fake = { version = "2.9", features = [
    'derive',
    'chrono',
    'http',
    'uuid',
], git = "https://github.com/cksac/fake-rs.git" }
futures = "0.3"
hyper = "1.0"
jsonwebtoken = "9.0"
log = "0.4"
nakago = "0.23"
nakago-axum = "0.23"
nakago-derive = "0.23"
mockall = "0.13"
pretty_env_logger = "0.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
ulid = "1.0"

[dev-dependencies]
mockall = "0.13"
pretty_assertions = "1.2"
