[package]
name = "nakago-ws"
version = "0.25.0"
description = "Websocket utils for Nakago"
documentation = "https://docs.rs/nakago-ws/"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "macros"] }
biscuit = "0.7.0"
derive-new = "0.7"
fake = { version = "3.1", features = ['derive', 'chrono', 'http', 'uuid'] }
futures = "0.3"
http = "1.0.0"
hyper = "1.0"
jsonwebtoken = "9.0"
log = "0.4"
nakago = "0.25"
nakago-axum = "0.25"
nakago-derive = "0.25"
mockall = "0.13"
pretty_env_logger = "0.5"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
ulid = "1.0"

[dev-dependencies]
mockall = "0.13"
pretty_assertions = "1.2"
