[package]
name = "nakago-examples-async-graphql"
version = "0.24.0"
description = "A lightweight Rust toolkit for sharp dependency injection 😎"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

publish = false

[features]
integration = []

[dependencies]
anyhow = "1.0"
async-graphql = { git = "https://github.com/bkonkle/async-graphql.git", branch = "update-http-axum", features = [
    "chrono",
    "dataloader",
] }
async-graphql-axum = { git = "https://github.com/bkonkle/async-graphql.git", branch = "update-http-axum" }
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }
chrono = { version = "0.4.19", features = ["serde"] }
derive-new = "0.7"
fake = { version = "2.9", features = [
    'derive',
    'chrono',
    'http',
    'uuid',
], git = "https://github.com/cksac/fake-rs.git" }
figment = { version = "0.10", features = ["env", "toml", "yaml", "json"] }
futures = "0.3"
hyper = "1.0"
log = "0.4"
nakago-async-graphql = "0.23"
nakago-axum = "0.24"
nakago-derive = "0.23"
nakago-figment = "0.23"
nakago-sea-orm = "0.23"
nakago-ws = "0.24"
nakago = "0.23"
oso = "0.27"
pico-args = "0.5.0"
pretty_env_logger = "0.5"
rand = "0.8"
sea-orm = { version = "1.0", features = [
    "macros",
    "mock",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
ulid = "1.0"

[dev-dependencies]
biscuit = "0.7.0"
criterion = "0.5"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
hyper-tls = "0.6"
maplit = { version = "1" }
mockall = "0.13"
pretty_assertions = "1.2"
tokio-tungstenite = { version = "0.24", features = ["url"] }
url = "2.0.0"
