[package]
name = "nakago-examples-cqrs-es"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "A lightweight Rust framework for sharp services 😎"
repository = "https://github.com/bkonkle/nakago"
license = "MIT"

publish = false #

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
nakago = { version = "0.1", path = "../../" }

[dev-dependencies]
criterion = "0.4"
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
mockall = "0.11"
pretty_assertions = "1.2"
