[package]
name = "nakago-examples-cqrs-es"
version = "0.10.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "A lightweight Rust framework for sharp services 😎"
documentation = "https://docs.rs/nakago/"
homepage = "https://github.com/bkonkle/nakago"
repository = "https://github.com/bkonkle/nakago"
license = "MIT"

publish = false #

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
nakago = "0.14"

[dev-dependencies]
criterion = "0.5"
fake = { version = "2.9", features = [
    'derive',
    'chrono',
    'http',
    'uuid',
], git = "https://github.com/cksac/fake-rs.git" }
mockall = "0.11"
pretty_assertions = "1.2"
