[package]
name = "nakago-examples-cqrs-es"
version = "0.24.1"
description = "A lightweight Rust toolkit for sharp dependency injection 😎"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

publish = false #

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
nakago = "0.23"

[dev-dependencies]
criterion = "0.5"
fake = { version = "2.9", features = ['derive', 'chrono', 'http', 'uuid'] }
mockall = "0.13"
pretty_assertions = "1.2"
