[package]
name = "nakago-examples-simple-warp"
version = "0.30.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "A lightweight Rust framework for sharp services 😎"
repository = "https://github.com/bkonkle/nakago"
license = "MIT"

publish = false

[features]
integration = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4.19", features = ["serde"] }
fake = { version = "2.9", features = [
    'derive',
    'chrono',
    'http',
    'uuid',
], git = "https://github.com/cksac/fake-rs.git" }
figment = { version = "0.10", features = ["env", "toml", "yaml", "json"] }
futures = "0.3"
hyper = "1.0"
log = "0.4"
nakago = "0.30"
nakago-figment = "0.30"
nakago-warp = "0.30"
nakago-derive = "0.30"
pico-args = "0.5.0"
pretty_env_logger = "0.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { version = "0.12", features = [
    "macros",
    "mock",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
ulid = "1.0"
warp = "0.3"

[dev-dependencies]
biscuit = "0.7.0"
criterion = "0.5"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
hyper-tls = "0.6"
maplit = { version = "1" }
mockall = "0.12"
pretty_assertions = "1.2"
url = "2.0.0"
